--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         Mérida, Yucatán, México
                         <a href="mailto:name@email.com">juicedmerkat@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Passionate software engineeringp proficient in HTML, CSS, JavaScript, TypeScript, and Python for creating dynamic web pages, e-commerce websites, and applications with CRUD operations. Knowledgeable in Django's ORM and MongoDB's ODM for robust backend systems. Committed to cybersecurity and creating secure software solutions. Eager to learn and explore new technologies to enhance capabilities as a software engineer. I like to manage, secure and test servers which I have made and managed in a personal way. I also like to solve machines to actively practice hacking.</p>
+                    <p class="lead mb-5">Software engineering student proficient in HTML, CSS, JavaScript, and Python for creating dynamic web pages, e-commerce websites, and REST API applications with CRUD operations. Knowledgeable in Django's and Flask for robust backend systems. Committed to cybersecurity and creating secure software solutions. Eager to learn and explore new technologies to enhance capabilities as a software engineer.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/julianchanpalomo/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/JulianChan123"><i class="fab fa-github"></i></a>
@@ -71,9 +71,13 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">EcommercePHP</h3>
-                            <div class="subheading mb-3">Laravel, Angular, CSS, Mysql</div>
-                            <p>I developed an e-commerce project using Laravel and Angular. The project aimed to create a complete online shopping platform with user authentication, registration, and separate user and admin panels. Authenticated users could browse available products, and add them to the shopping cart. The admin panel provided content management functionalities, including CRUD operations for products and categories.
+                            <h3 class="mb-0">ControlEscolar</h3>
+                            <div class="subheading mb-3">Flask, PostgreSQL,DynamoDB, SNS... </div>
+                            <p>EST API for managing information of students and teachers. The system is hosted on an EC2 and has the following functionalities:
+                                Support for relational databases with PostgreSQL and non-relational with DynamoDB.
+                                Storage of photos in an S3 bucket.
+                                Sending emails with student information through SNS.
+                                User session initiation, closure, and verification.
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2023</span></div>
@@ -86,14 +90,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2023</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
+                    
                 </div>
             </section>
             <hr class="m-0" />
@@ -164,8 +161,11 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            TIC's technical school degree - COBAY Plantel Tekax
+                            Python Essentials 2 -CISCO
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            AWS Cloud Foundations                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Google cloud computing foundations - Google cloud skill boost
